fix placeholder overflow

--- a/CSS/mediaQuery_and_animation.css
+++ b/CSS/mediaQuery_and_animation.css
@@ -149,6 +149,9 @@
   .projects {
     height: auto;
   }
+  .contact-input {
+    font-size: 14px;
+  }
   #form {
     margin-top: 40px;
     margin-right: 0;
